fix section, delete header, united in awesome

--- a/index.html
+++ b/index.html
@@ -9,16 +9,13 @@
   
 </head>
 <body>
-    <header class="header">
-        <div class="container">
-            <h2 class="header_title"> WHY THIS IS AWESOME </h2>
-            <div class="header_line"></div>
-            <div class="header_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
-        </div>
-    </header>
-
+  
     <section class="awesome">
         <div class="container">
+            <h2 class="awesome_title"> WHY THIS IS AWESOME </h2>
+            <div class="awesome_line"></div>
+            <div class="awesome_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
+
             <div class="row">
                 <div class="row-item">
                     <div class="row-item_icon">
