fixed Homework5 - social,footer,header

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                  <div class="header_wrapper">
                      <div class="header_logo">ax</div>
                      <h2 class="header_title">MODERN AXURE TEMPLATE FOR BEAUTIFUL PROTOTYPES</h2>
-                     <div class="text header_text">Lorem ipsum dolor sit amet, <br> consectetur adipiscing elit. Aenean</div>
-                    <div class="link_btn header_link">Download</div>
+                     <div class="text header_text">Lorem ipsum dolor sit amet, <br> consectetur adipiscing elit. Aenean</div>                   
+                     <a href="#" class="link_btn header_link">Download</a>
                   </div>
               </div>
 
