change icons on Font Awesome

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
            <div class="row_wrapper">
             <div class="row-item">
                 <div class="row-item_icon">
-                    <img src="/img/icon1.png" alt="img1" >
+                    <i class="far fa-lightbulb"></i>
                 </div>
                 <h3 class="row-item_title">Thoughtful Design</h3>
                 <div class="row-item_text">Lorem ipsum dolor sit amet, consectetur adipiscing 
@@ -99,7 +99,7 @@
 
             <div class="row-item">
                 <div class="row-item_icon">
-                    <img src="/img/icon2.png" alt="img2" >
+                    <i class="far fa-keyboard"></i>
                 </div>
                 <h3 class="row-item_title">Well Crafted</h3>
                 <div class="row-item_text">Lorem ipsum dolor sit amet, consectetur adipiscing 
@@ -108,7 +108,7 @@
 
             <div class="row-item">
                 <div class="row-item_icon">
-                    <img src="/img/icon3.png" alt="img3" >
+                    <i class="fas fa-bolt"></i>
                 </div>
                 <h3 class="row-item_title">Easy to Customize</h3>
                 <div class="row-item_text">Lorem ipsum dolor sit amet, consectetur adipiscing 
