fixed form header

--- a/index.html
+++ b/index.html
@@ -46,15 +46,25 @@
               </div>
 
               <form action="#" class="header-form">
-                  <div class="form-wrapper">
-                 <label for="" class="header-form_name">Try Your <span class="header-form_namered">FREE</span> Trial Today</label>
-                 <div class="header-form_allinput">
-                    <input type="text" class="header-form_input" placeholder="Name"><br>
-                    <input type="text" class="header-form_input" placeholder="Email"><br>
-                    <input type="password" class="header-form_input" placeholder="Password"><br>
-                 </div>
-                 <submit class="header-form_btn">Get Started</submit>
+               <div class="form-content">
+                <div class="header-form_name">Try Your <span class="header-form_namered">FREE</span> Trial Today</div>
+              
+                <div class="form_item">
+                    <label for="name" class="form_item__lbl">Name</label>
+                    <input type="text" id="name" class="form_item__input">
                 </div>
+                <div class="form_item">
+                    <label for="email" class="form_item__lbl">Email</label>
+                    <input type="email" id="email" class="form_item__input">
+                </div>
+                <div class="form_item">
+                    <label for="pass" class="form_item__lbl">Password</label>
+                    <input type="password" id="pass" class="form_item__input">
+                </div>
+            </div>
+
+            <button class="form-btn" type="submit">Get Started </button>
+
              </form>
            </div>
         </div>
@@ -81,6 +91,17 @@
         </div>
         </div>
     </section>
+
+   <!-- <section class="feautures">
+        <div class="container">
+            <div class="tabs-wrapper">
+                <div class="tab_item">tab1</div>
+                <div class="tab_item">tab1</div>
+                <div class="tab_item">tab1</div>               
+            </div>
+        </div>
+    </section>
+    -->
 
     <section class="awesome">
         <div class="container">
