Done Form Contact, fixed form Header

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                      <div class="header_logo">ax</div>
                      <h2 class="header_title">MODERN AXURE TEMPLATE FOR BEAUTIFUL PROTOTYPES</h2>
                      <div class="text header_text">Lorem ipsum dolor sit amet, <br> consectetur adipiscing elit. Aenean</div>                   
-                     <a href="#" class="link_btn header_link">Download</a>
+                     <a href="#" class="button link_btn header_link">Download</a>
                   </div>
               </div>
 
@@ -50,16 +50,16 @@
                 <div class="header-form_name">Try Your <span class="header-form_namered">FREE</span> Trial Today</div>
               
                 <div class="form_item">
-                    <label for="name" class="form_item__lbl">Name</label>
-                    <input type="text" id="name" class="form_item__input">
+                    <label for="name" class="form-lbl form_item__lbl">Name</label>
+                    <input type="text" id="name" class="form-input form_item__input">
                 </div>
                 <div class="form_item">
-                    <label for="email" class="form_item__lbl">Email</label>
-                    <input type="email" id="email" class="form_item__input">
+                    <label for="email" class="form-lbl form_item__lbl">Email</label>
+                    <input type="email" id="email" class="form-input form_item__input">
                 </div>
                 <div class="form_item">
-                    <label for="pass" class="form_item__lbl">Password</label>
-                    <input type="password" id="pass" class="form_item__input">
+                    <label for="pass" class="form-lbl form_item__lbl">Password</label>
+                    <input type="password" id="pass" class="form-input form_item__input">
                 </div>
             </div>
 
@@ -252,8 +252,41 @@
         <div class="container">
             <h2 class="axure_title">STYLISH AXURE DESIGN</h2>           
             <div class="axure_text">Use the sections you need, remove the ones you don't.  Create gorgeous prototypes faster than ever!</div>
-            <a href="#" class="link_btn axure_link">Download</a>
+            <a href="#" class="button link_btn axure_link">Download</a>
         
+        </div>
+    </section>
+
+    <section class="contact">
+        <div class="container">
+            <h2 class="title contact_title">contact us</h2>           
+            <div class="textundertitle contact_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
+
+            <form action="#" class="form-contact">
+                <div class="form-wrapper">
+                <div class="inputs-wrapper">
+                    <div class="form-contact_item">
+                        <label for="name-contact" class="form-lbl form-contact_item__lbl">Name</label>
+                        <input type="text" class="form-input form-contact_item__input" id="name-contact">
+                    </div>
+                    <div class="form-contact_item">
+                        <label for="email-contact" class="form-lbl form-contact_item__lbl">Email</label>
+                        <input type="email" class="form-input form-contact_item__input" id="email-contact">
+                    </div>
+                    <div class="form-contact_item">
+                        <label for="pass-contact" class="form-lbl form-contact_item__lbl">Password</label>
+                        <input type="password" class="form-input form-contact_item__input" id="pass-contact">
+                    </div>
+                </div>
+
+                <div class="form-contact_textarea">
+                    <label for="mess" class="form-lbl form-contact_item__lbl">Message</label>
+                    <textarea name="mess-contact" id="mess" cols="30" rows="10" class="form-input form-contact_textarea__msg" ></textarea>
+                </div>
+            </div>
+
+            <button class="button contact_button" type="submit">Send Message </button>
+            </form>
         </div>
     </section>
 
