ready landing without adaptive

--- a/index.html
+++ b/index.html
@@ -52,28 +52,20 @@
                     </div>
                 </div>
 
-                <form action="#" class="header-form">
+                <form action="#" class="">
                     <div class="form-content">
                         <div class="header-form_name">Try Your <span class="header-form_namered">FREE</span> Trial Today
                         </div>
+                        <label for="name" class="form-lbl form_item__lbl">Name</label>
+                        <input type="text" id="name" class="form-input form_item__input">
 
-                        <div class="form_item">
-                            <label for="name" class="form-lbl form_item__lbl">Name</label>
-                            <input type="text" id="name" class="form-input form_item__input">
-                        </div>
-                        <div class="form_item">
-                            <label for="email" class="form-lbl form_item__lbl">Email</label>
-                            <input type="email" id="email" class="form-input form_item__input">
-                        </div>
-                        <div class="form_item">
-                            <label for="pass" class="form-lbl form_item__lbl">Password</label>
-                            <input type="password" id="pass" class="form-input form_item__input">
-                        </div>
+                        <label for="email" class="form-lbl form_item__lbl">Email</label>
+                        <input type="email" id="email" class="form-input form_item__input">
 
+                        <label for="pass" class="form-lbl form_item__lbl">Password</label>
+                        <input type="password" id="pass" class="form-input form_item__input">
                     </div>
-
                     <button class="form-btn" type="submit">Get Started </button>
-
                 </form>
             </div>
         </div>
@@ -83,7 +75,7 @@
         <div class="container">
             <div class="social-wrapper">
                 <div class="social-wrapper_title">
-                    <h3 class="social-media">Social Media</h3>
+                    <h3 class="h3-title social-media">Social Media</h3>
                     <div class="text social_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
                         euismod bibendum laoreet.</div>
                 </div>
@@ -109,16 +101,35 @@
         </div>
     </section>
 
-    <!-- <section class="feautures">
+    <section class="feautures">
         <div class="container">
-            <div class="tabs-wrapper">
-                <div class="tab_item">tab1</div>
-                <div class="tab_item">tab1</div>
-                <div class="tab_item">tab1</div>               
+            <div class="feautures-wrapper">
+                <div class="feautures_left">
+                    <div class="tab_item">tab1</div>
+                    <div class="tab_item">tab1</div>
+                    <div class="tab_item">tab1</div>
+                </div>
+
+                <div class="feautures_center">
+                    <h3 class="h3-title feautures-title">Tabs with soft transitioning effect.</h3>
+                    <div class="text feautures_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod 
+                        bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra 
+                        justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque 
+                        penatibus et magnis dis parturient montes.            
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod 
+                        bibendum laoreet.</div>
+                        <a href="#" class="button link_btn feautures_link">Download</a>
+                </div>
+
+                <div class="feautures_right">
+                    <img src="/img/feautures_img.png" alt="feautures_image" class="feautures_image">
+                </div>
             </div>
+
+
         </div>
     </section>
-    -->
+
 
     <section class="awesome">
         <div class="container">
@@ -130,7 +141,7 @@
                     <div class="row-item_icon">
                         <i class="far fa-lightbulb"></i>
                     </div>
-                    <h3 class="row-item_title">Thoughtful Design</h3>
+                    <h3 class="h3-title row-item_title">Thoughtful Design</h3>
                     <div class="row-item_text">Lorem ipsum dolor sit amet, consectetur adipiscing
                         elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra.
                     </div>
@@ -140,7 +151,7 @@
                     <div class="row-item_icon">
                         <i class="far fa-keyboard"></i>
                     </div>
-                    <h3 class="row-item_title">Well Crafted</h3>
+                    <h3 class="h3-title row-item_title">Well Crafted</h3>
                     <div class="row-item_text">Lorem ipsum dolor sit amet, consectetur adipiscing
                         elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra.
                     </div>
@@ -150,7 +161,7 @@
                     <div class="row-item_icon">
                         <i class="fas fa-bolt"></i>
                     </div>
-                    <h3 class="row-item_title">Easy to Customize</h3>
+                    <h3 class="h3-title row-item_title">Easy to Customize</h3>
                     <div class="row-item_text">Lorem ipsum dolor sit amet, consectetur adipiscing
                         elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra.
                     </div>
@@ -289,18 +300,16 @@
             <form action="#" class="form-contact">
                 <div class="form-wrapper">
                     <div class="inputs-wrapper">
-                        <div class="form-contact_item">
-                            <label for="name-contact" class="form-lbl form-contact_item__lbl">Name</label>
-                            <input type="text" class="form-input form-contact_item__input" id="name-contact">
-                        </div>
-                        <div class="form-contact_item">
-                            <label for="email-contact" class="form-lbl form-contact_item__lbl">Email</label>
-                            <input type="email" class="form-input form-contact_item__input" id="email-contact">
-                        </div>
-                        <div class="form-contact_item">
-                            <label for="pass-contact" class="form-lbl form-contact_item__lbl">Password</label>
-                            <input type="password" class="form-input form-contact_item__input" id="pass-contact">
-                        </div>
+
+                        <label for="name-contact" class="form-lbl form-contact_item__lbl">Name</label>
+                        <input type="text" class="form-input form-contact_item__input" id="name-contact">
+
+                        <label for="email-contact" class="form-lbl form-contact_item__lbl">Email</label>
+                        <input type="email" class="form-input form-contact_item__input" id="email-contact">
+
+                        <label for="pass-contact" class="form-lbl form-contact_item__lbl">Password</label>
+                        <input type="password" class="form-input form-contact_item__input" id="pass-contact">
+
                     </div>
 
                     <div class="form-contact_textarea">
