--- a/index.html
+++ b/index.html
@@ -112,13 +112,14 @@
 
                 <div class="feautures_center">
                     <h3 class="h3-title feautures-title">Tabs with soft transitioning effect.</h3>
-                    <div class="text feautures_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod 
-                        bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra 
-                        justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque 
-                        penatibus et magnis dis parturient montes.            
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod 
+                    <div class="text feautures_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
+                        euismod
+                        bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra
+                        justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque
+                        penatibus et magnis dis parturient montes.
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod
                         bibendum laoreet.</div>
-                        <a href="#" class="button link_btn feautures_link">Download</a>
+                    <a href="#" class="button link_btn feautures_link">Download</a>
                 </div>
 
                 <div class="feautures_right">
