--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
 
 <body>
 
-
     <nav class="navigation">
         <div class="container">
             <div class="nav_wrapper">
@@ -34,6 +33,11 @@
                     <li class="navigation_menu__item"><a href="#" class="navigation_menu__link">reviews</a></li>
                     <li class="navigation_menu__item"><a href="#" class="navigation_menu__link">contact</a></li>
                 </ul>
+                <div class="hamburger">
+                    <span class="hamburger_item hamburger_item-1"></span>
+                    <span class="hamburger_item"></span>
+                    <span class="hamburger_item"></span>
+                </div>
 
             </div>
         </div>
